--- a/turbo.json
+++ b/turbo.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["//"],
+  "$schema": "https://turborepo.dev/schema.json",
   "tasks": {
     "build": {
       "outputs": [".next/**", "!.next/cache/**"]
